feat: update data structure
