# package/src/swagger_server/controllers/customer_db_functions.py
@@ -15,7 +15,6 @@ CLIENT = MongoClient(
   )
 DB = CLIENT.database
 customer_details = DB.customer_details
-payment_details = DB.payment_details
 invoices = DB.invoices
 
 @requires_auth
@@ -51,51 +50,12 @@ def put_customer(id, body):
 
 @requires_auth
 @requires_scope('registree')
-def post_payment(body):
-    return str(payment_details.insert_one(body).inserted_id)
-
-@requires_auth
-@requires_scope('registree', 'recruiter')
-@check_id
-def get_payment(id):
-    result = payment_details.find_one({'_id': ObjectId(id)})
-    if result:
-        result['_id'] = str(result['_id'])
-        return result
-    else:
-        return {'ERROR': 'No matching data found.'}, 409
-
-@requires_auth
-@requires_scope('registree', 'recruiter')
-def get_payment_by_customer(customer_id):
-    result = payment_details.find_one({'customer_id': customer_id})
-    if result:
-        result['_id'] = str(result['_id'])
-        return result
-    else:
-        return {'ERROR': 'No matching data found.'}, 409
-
-@requires_auth
-@requires_scope('registree')
-@check_id
-def put_payment(id, body):
-    result = payment_details.find_one_and_update(
-                {'_id': ObjectId(id)},
-                {'$set':{body.get('field'): body.get('value')}},
-                return_document=ReturnDocument.AFTER
-            )
-    if result:
-        result['_id'] = str(result['_id'])
-        return result
-    else:
-        return {'ERROR': 'No matching data found.'}, 409
-
-@requires_auth
-@requires_scope('registree')
 def post_invoice(body):
-    # dummy data
-    price = _calculate_quote(100)
-    body.payment.price = price
+    price = _calculate_quote(body.get('rsvp'))
+    body['price'] = {
+        'amount': price,
+        'currency': 'ZAR'
+    }
     return str(invoices.insert_one(body).inserted_id)
 
 @requires_auth
